--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.12.1",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/nodemailer": "^7.0.1",
